# db-snooper

./: .gitignore  AGENTS.md  LICENCE  README.md  THIRD_PARTY_NOTICES.md  dive_sim_profile.sql  pyproject.toml  spec.md
dive_sim/: dive_sim.sql
docs/: spec.md  text2sql_leader.txt
docs/evals/: 1.txt  2.txt
eval-dataset/: eval.jsonl
skills/db-snooper-context/: SKILL.md
spec/: main.md  profile_example.sql  profiler.md  python_impl.md  schema_linking.md  text_to_sql_pipeline.md  text_to_sql_pipelint.md
src/ai_sql_context/: cli.py  connectors.py  inspectors.py  models.py  profiler.py  profiling.py  render.py
src/db_snooper/: __init__.py  agent_skills.py  api.py  cli.py  connection.py  profiler.py  progress.py  query_timeout.py  schema_linker.py
src/db_snooper/skills/db-snooper-context/: SKILL.md
src/db_snooper/skills/db-snooper-profile/: SKILL.md
src/db_snooper/skills/db-snooper-schema-links/: SKILL.md
tests/: test_cli.py  test_connection.py  test_profiler.py  test_profiling.py  test_render.py  test_schema_linker.py
