[project]
name = "ai-sql-context"
version = "0.1.0"
description = "Generate compact SQL database profiles for LLM text-to-SQL context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
mariadb = ["mariadb>=1.1"]
duckdb = ["duckdb-engine>=0.13"]
dev = ["pytest>=8.0"]

[project.scripts]
ai-sql-profile = "ai_sql_context.profiler:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_sql_context"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
