[project]
name = "db-snooper"
version = "0.1.0"
description = "Snoop through databases and generate compact LLM-ready SQL context."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasketch>=1.6",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2"]
mysql = ["pymysql>=1.1"]
mariadb = ["mariadb>=1.1"]
duckdb = ["duckdb-engine>=0.13"]
dev = ["pytest>=8.0"]

[project.scripts]
db-snooper = "db_snooper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_snooper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
