[project]
name = "db-snooper"
version = "0.0.5"
description = "Generate compact, LLM-ready database context with schema profiles and inferred join links."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENCE"]
dependencies = [
    "datasketch>=1.6",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "psycopg>=3.2",
    "duckdb-engine>=0.13"
]
classifiers = [
    "License :: OSI Approved :: MIT License",

]
authors = [
  {name = "Renat Iuldashev", email = "renatyv@gmail.com"}
]

[project.optional-dependencies]
mariadb = ["mariadb>=1.1"]

[project.scripts]
db-snooper = "db_snooper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db_snooper"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/eval-dataset",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
